src/test/ui/issues/issue-10545.stderr
error[E0603]: struct `S` is private
  --> $DIR/issue-10545.rs:6:14
   |
LL | fn foo(_: a::S) {
   |              ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
